--- a/public/index.html
+++ b/public/index.html
@@ -22,47 +22,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title> Hortalizas Gaia IOT </title>
+  <title> Application Web </title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- NOTIFICATION WEB -->
+ <!--  <script src="./main.js"></script> -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  <script src="./main.js"></script>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
- <!--  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script> -->
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <!-- <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script> -->
-
-  <!-- <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyDnHt2ilJnufd_RN1MvJfAgSvo3XQx_O4c",
-      authDomain: "first-firebase-aj.firebaseapp.com",
-      databaseURL: "https://first-firebase-aj.firebaseio.com",
-      projectId: "first-firebase-aj",
-      storageBucket: "first-firebase-aj.appspot.com",
-      messagingSenderId: "713747105477",
-      appId: "1:713747105477:web:66a6e84e8c0a82363412ac",
-      measurementId: "G-JTSPX8K2B4"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-
-  </script> -->
 </body>
 
 </html>
